...

            <EditText
                android:id="@+id/searchET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toStartOf="@id/filterBtn"
                android:layout_toEndOf="@id/progressBar"
                android:background="@drawable/shape_rectangle"
                android:hint="search"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorGrey3" />
...
